--- a/03-cleaning.Rmd
+++ b/03-cleaning.Rmd
@@ -8,7 +8,7 @@ library(dplyr)
 library(lubridate)
 ```
 
-## Crime Data
+## Arrest Data
 
 ### Data Import - 2021 Data
 
@@ -31,7 +31,7 @@ nyc_arrests <- nyc_arrests %>% select(-c(New.Georeferenced.Column, X_COORD_CD, Y
 
 ### Data Import - 2006-2021 Data
 
-We now repeat this transformation on our older data. We save this data as 'nyc_arrests_old'. One issue with this dataset is its size. Weighing in at over one Gigabyte, this dataset in its unmodified form takes a very long time to download and modify. As a result, we have decided to utilize a reduced version of this dataset. The transformations used to create this historical dataset are seen below:
+We now repeat this transformation on our older data. We save this data as 'nyc_arrests_old'. One issue with this dataset is its size. Weighing in at over one Gigabyte, this dataset in its unmodified form takes a very long time to download and modify. As a result, we have decided to utilize a reduced version of this dataset that only includes data starting in 2011. The transformations used to create this historical dataset are seen below:
 
 ```{r, eval=FALSE}
 nyc_arrests <- read.table("D:/Documents/R Projects/Final Project Proposal/NYPD_Arrests_Data__Historic_.csv",
@@ -63,11 +63,13 @@ nyc_arrests_old$ARREST_DATE <- as_date(nyc_arrests_old$ARREST_DATE, format="%Y-%
 
 ### Combining Old and New
 
-If we need a combined dataset, we can append the historical data to the 2021 data like so:
+For a lot of our analysis we will want a combined dataset, so we can append the historical data to the 2021 data like so:
 
 ```{r}
 nyc_arrests_combined <- bind_rows(nyc_arrests, nyc_arrests_old)
 ```
+
+This is the main dataset we will be using throughout our analysis, but for certain visualizations we will want our data by category of arrest. The transformation to get the data in that form is below.
 
 ### Aggregating by Category
 
@@ -84,5 +86,22 @@ nyc_arrests_by_category_year_boro <- (
 )
 ```
 
+## Crime Data
 
+The other dataset that we will be using in our analysis is a dataset looking at crime in New York. This dataset gives aggregated crime numbers for each New York county, and this data is from 2010-2020. We will be using this to compare to arrest levels in our analysis, so we did the following transformation below to get data by borough.
+
+```{r}
+# Crime Data Import
+nyc_crime <- read.table("https://data.ny.gov/api/views/ca8h-8gjq/rows.csv?accessType=DOWNLOAD&sorting=true",
+                        header=TRUE,
+                        sep=",",
+                        quote='"'
+                        )
+
+nyc_crime <- (
+  filter(nyc_crime, Region == "New York City", Year > 2010) %>%
+    select(c(County, Year, Murder, Rape, Aggravated.Assault, Motor.Vehicle.Theft)) %>%
+    mutate(Category = "Crime Reports")
+)
+```
 
