--- a/03-cleaning.Rmd
+++ b/03-cleaning.Rmd
@@ -1,7 +1,7 @@
 # Data transformation
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, eval=FALSE)
 library(ggplot2)
 library(tidyr)
 library(dplyr)
